started javascript and added trivia questions

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="centered"> 
 
         <audio class= song controls>
-                <source src="./assets/images/I'll be there for you - The Rembrandts - Friends song.mp3" type="audio/mpeg">
+                <source src="./assets/images/the rembrandts - ill be there for you (theme from friends).mp3" type="audio/mpeg">
         </audio>
-
+      <div class: 
         <h1>Friends Trivia</h1>
   <p>There are 10 trivia questions. You will have 20 seconds to answer each question!</p>
   <p>We will see how well you know your Friends.  Good Luck!</p>
