working game completed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
   <p id= "remaining-time" class= "lead"> Remaining Time: <span id= "timer"></span></p>
   
-  <p id = "questions" class= "lead"></p>
+  <!--<p id = "questions" class= "lead"></p>-->
 
       </div>
     <div id = "results"></div>
@@ -59,9 +59,6 @@
       
     </div>
   </div>
-
-    </div>
-    </div>
   
 
     <!--Links for javascript and jquery -->
